force-app/main/default/objects/Coupon__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Coupon will not be visible in the discount list until this checkbox is checked.</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>