force-app/main/default/objects/Coupon__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>From this date, the coupon will not be available in the discount list.</description>
    <label>End Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>