force-app/main/default/objects/Coupon__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>From this date, coupon will appear in the discount list</description>
    <label>Start Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>