force-app/main/default/objects/Coupon__c/validationRules/End_Date_must_be_greater_than_Start_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>End_Date_must_be_greater_than_Start_Date</fullName>
    <active>true</active>
    <errorConditionFormula>Start_Date__c &gt;= End_Date__c</errorConditionFormula>
    <errorDisplayField>End_Date__c</errorDisplayField>
    <errorMessage>The End Date must be greater than the Start Date.</errorMessage>
</ValidationRule>